Fix z-index issues with overlapping menus

--- a/themes/bandarlog/static/css/bandarlog.css
+++ b/themes/bandarlog/static/css/bandarlog.css
@@ -34,6 +34,7 @@ body {
     background-color: rgba(255, 255, 255, .9);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .3);
     color: black;
+    z-index: 2;
 }
 .topmenu .container {
     position: relative;
@@ -77,6 +78,7 @@ body {
 }
 .pure-menu-children {
     box-shadow: 0 2px 1px 0 rgba(0, 0, 0, .3);
+    z-index: 1;
 }
 
 .footer {
